Update UI and functionality of Transformer.razor
Updated `MainLayout.razor` to include a new link in the footer and renamed a class. Major updates were made to `Transformer.razor` including the addition of a FluentSelect component, navigation buttons, and layout adjustments. `Transformer.razor.cs` was updated with new methods for saving and navigating code snippets, improved error handling, and reading code snippets from a JSON file. `FluentTransformer.csproj` was updated with a new ProjectExtensions tag. `app.css` was updated to change the grid-column property and rename a class. Added a new `JsSnippets.json` file with JavaScript code snippets.

--- a/FluentTransformer/FluentTransformer.csproj
+++ b/FluentTransformer/FluentTransformer.csproj
@@ -11,4 +11,6 @@
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-* " />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 </Project>
