--- a/FluentTransformer/FluentTransformer.csproj
+++ b/FluentTransformer/FluentTransformer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="BlazorMonaco" Version="3.2.0" />
 	<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-* " />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-* " />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
