--- a/FluentTransformer/Dockerfile
+++ b/FluentTransformer/Dockerfile
@@ -9,15 +9,13 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["FluentTransformer/FluentTransformer.csproj", "FluentTransformer/"]
-RUN dotnet restore "./FluentTransformer/FluentTransformer.csproj"
-COPY . .
-WORKDIR "/src/FluentTransformer"
-RUN dotnet build "./FluentTransformer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY . ./FluentTransformer
+WORKDIR /src/FluentTransformer
+RUN dotnet build "FluentTransformer.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./FluentTransformer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "FluentTransformer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
